--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 asdad<html>
 <head>
-<title>Click Game</title>
+<title>Zdarova Wlad</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script type="text/javascript" language="javascript">
